# matter-component

./: CMakeLists.txt  Kconfig  generate_include_files.cmake  idf_component.yml  ota-image.cmake
components/esp_matter/: CMakeLists.txt
components/esp_matter_console/: CMakeLists.txt
components/esp_matter_controller/: CMakeLists.txt
connectedhomeip/: CMakeLists.txt  ota-image.cmake
connectedhomeip/include/: CHIPVersion.h
connectedhomeip/include/app/: AppBuildConfig.h
connectedhomeip/include/asn1/: ASN1OID.h
connectedhomeip/include/ble/: BleBuildConfig.h
connectedhomeip/include/core/: CHIPBuildConfig.h
connectedhomeip/include/crypto/: CryptoBuildConfig.h
connectedhomeip/include/inet/: InetBuildConfig.h
connectedhomeip/include/lwip/: lwip_buildconfig.h
connectedhomeip/include/matter/tracing/: build_config.h
connectedhomeip/include/platform/: CHIPDeviceBuildConfig.h
connectedhomeip/include/setup_payload/: CHIPAdditionalDataPayloadBuildConfig.h
connectedhomeip/include/system/: SystemBuildConfig.h
examples/all_device_types_app/: CMakeLists.txt
examples/all_device_types_app/main/: CMakeLists.txt
examples/blemesh_bridge/: CMakeLists.txt
examples/common/app_bridge/: CMakeLists.txt
examples/common/app_reset/: CMakeLists.txt
examples/controller/: CMakeLists.txt
examples/esp-now_bridge_light/: CMakeLists.txt
examples/generic_switch/: CMakeLists.txt
examples/light/: CMakeLists.txt  sdkconfig.defaults.esp32h2
examples/light_switch/: CMakeLists.txt
examples/mfg_test_app/: CMakeLists.txt
examples/mfg_test_app/main/: CMakeLists.txt
examples/refrigerator/: CMakeLists.txt
examples/room_air_conditioner/: CMakeLists.txt
examples/sleepy_device/: CMakeLists.txt
examples/zap_light/: CMakeLists.txt
examples/zigbee_bridge/: CMakeLists.txt
